samples/k8s-test/k8s-music-stack.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-music-stack
  labels:
    app: icecast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: icecast
  template:
    metadata:
      labels:
        app: icecast
    spec:
      containers:
      - name: icecast
        image: mars64/icecast:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
      - name: nginx
        image: eljojo/nginx-rtmp-docker:latest
        ports:
        - containerPort: 8080
