samples/k8s-test/k8s-icecast-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: icecast
spec:
  selector:
    app: icecast
  ports:
    - name: icecast
      port: 8000
      targetPort: 8000
      nodePort: 31001
    - name: nginx
      port: 8080
      targetPort: 8080
      nodePort: 31002
  type: NodePort
