samples/k8s-test/k8s-icecast-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: icecast-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - radio.eljojo.net
    secretName: radio-eljojonet-tls
  rules:
  - host: radio.eljojo.net
    http:
      paths:
      - path: /
        backend:
          serviceName: icecast
          servicePort: 8080
